# Nomader

./: .gitignore  .prettierrc  README.md  REVIEW.md  package.json
.github/workflows/: main.yml
backend/: .env.example  Dockerfile  docker-compose.yml  knexfile.ts  package.json  server.ts  tsconfig.json
backend/controller/: chatController.ts  currencyController.ts  getDataController.ts  matchController.ts  userController.ts
backend/middleware/: formidableMiddleware.ts  isLoggedInGuard.ts  postMiddleware.ts  signUpMiddleware.ts
backend/migrations/: 20220909073120_createUsersTable.ts
backend/routers/: chatRoutes.ts  getDataRoutes.ts  logInRoutes.ts  matchRoutes.ts  userRoutes.ts
backend/seeds/: insertData.ts  insertUsers.ts  insertUsersAfter.ts
backend/service/: chatRoomService.ts  currencyService.ts  getDataService.ts  matchService.ts  userService.ts
backend/sql/: createTable.sql  createTable.ts  demo.sql  demoCreateTable.ts  demoInsertInterestsAndJobs.ts  demoInsertUser.ts  demoInsertUsersAfter.ts
backend/utils/: error.ts  errors.ts  models.ts  wrapper.ts
database/: .gitignore  docker-compose.yml
database/env/: pyvenv.cfg
database/sql/: createDBTable.sql  createDBTrigger.sql  createDWTable.sql  createDWTrigger.sql  createTable.sql  createTrigger.sql
database/src/: .env.example  cityData.csv  config.py  dataToMongo.py  mongoToPsqlDB.py  (+10 more)
demo/: .prettierrc  package.json
docs/: review.dio
frontend/: .env.example  .gitignore  package-lock.json  package.json
python_demo/: pyproject.toml
python_demo/conf/: config.yaml
python_demo/src/: main.py
(+279 files in other folders)
