[tool.poetry]
name = "python-demo"
version = "0.1.0"
description = ""
authors = ["jason.li <jasonli772016@gmail.com>"]
readme = "README.md"
packages = [{include = "python_demo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
